src/styles/globals.css
body {
  overflow-x: hidden;
  font-family: "Space Grotesk", sans-serif;
  /* padding: 0px 50px; */
  background: linear-gradient(to right, #414dff, #04bcff);
  color: white;
}

a:hover {
  color: rgb(109, 253, 255);
  transition: 0.5s;
}

@media (max-width: 640px) {
  body {
    padding: 10px;
  }
  #lottie-hero {
    margin-top: 40px
  }
}

nav {
  margin-bottom: 40px;
}

footer {
  padding: 0px !important
}

.svg_main {
  width: 100%;
  height: 100%;
}

.text-xxl {
  font-size: 4.8em;
}

.bg-purple {
  background-color: #1b263a;
}

.bg-blue {
  background-color: #134ae9;
}

.bg-gray {
  background-color: #f9fbfb;
}

.Grotesk {
  font-family: "Space Grotesk", sans-serif;
}

.underline-blue {
  text-decoration: underline;
  text-decoration-color: #134ae9;
  text-decoration-thickness: 2px;
  text-underline-position: under;
}

.underline-white {
  text-decoration: underline;
  text-decoration-color: #fff;
  text-decoration-thickness: 2px;
  text-underline-position: under;
}

.underline-gray {
  text-decoration: underline;
  text-decoration-color: #adadad;
  text-decoration-thickness: 2px;
  text-underline-position: under;
}

.max-w-8xl {
  max-width: 90rem;
}

.max-w-9xl {
  max-width: 110rem;
}

